@@ -114,6 +114,7 @@ class MmsDownloader : public InternalDownloader {
 	virtual void Write (void *buf, gint32 offset, gint32 n);
 	virtual char *GetDownloadedFilename (const char *partname);
 	virtual char *GetResponseText (const char *partname, gint64 *size);
+	virtual void SetFilename (const char *fname) { /* we don't need this */ }
 
 	void SetSource (MmsSource *src); // main thread only
 	MmsPlaylistEntry *GetCurrentEntryReffed (); // main thread only
